<resources>
    <string-array name="dept_list">
        <item>Select Branch</item>
        <item>Civil Engineering</item>
        <item>Computer Science and Engineering</item>
        <item>Electronics and Communication Engineering</item>
        <item>Electrical and Electronics Engineering</item>
        <item>Mechanical Engineering</item>
    </string-array>
    <string-array name="fac_list">
        <item>Select Faculty Type</item>
        <item>Teaching</item>
        <item>Non Teaching</item>
    </string-array>
    <string-array name="des_list">
        <item>Select Designation</item>
        <item>Principal</item>
        <item>HOD</item>
        <item>Associate Professor</item>
        <item>Assistant Professor</item>
        <item>Programmer</item>
        <item>Assistant Programmer</item>
        <item>Instructor</item>
        <item>Foreman</item>
        <item>Mechanic</item>
    </string-array>
    <string name="app_name">Sparrow Campus</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vision">
        "To be a preferred institution in Engineering Education by achieving excellence in teaching and research and to remain as a source of pride for its commitment to holistic development of individual and society."
    </string>
    <string name="mission">
        "To nurture and develop technically competent professionals with a strong ethical foundation to contribute to the socio-economic development of the nation and the world."
    </string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="textviewsss">
        <b>CORE VALUES</b>
    </string>
    <string name="textviewssss">"<b>Holistic Development :</b>
       The Students are educated in a spiritual atmosphere under the blessings of His Holiness Mahaswamiji of Shri Math by adopting self-service, participative and cooperative learning and leadership practices along with academics."
    </string>
    <string name="textviewsssss">"<b>Student Centric Learning :</b>
       To create student centric learning atmosphere by adopting experimental learning, mini projects, students seminars, internship program, industrial visits, technical competitions, project seminars, carrier guidance activities and extracurricular activities."
    </string>
    <string name="textviewssssss">"<b>Center of Excellence :</b>
        To develop a centre of excellence in providing education in the field of Engineering and Technology to produce technically competent and socially responsible Engineering professionals."
    </string>
    <string name="textviewsssssss">"<b>Promoting prosperity :</b>
        The sole objective is to provide Engineering Education to the rural youth of this region for prosperous carrier and development of society."
    </string>
    <string name="textviewssssssss">"<b>Environmental Consciousness :</b>
        Students are educated to make optimum use of environmental resources like Soil/Land, Water and conserve the energy so that they can keep the campus clean, green and pollution free."
    </string>
    <string name="str1"><b>VISION:</b><br />
    </string>
    <string name="str2">"To be a preferred institution in Engineering Education by achieving excellence in teaching and research and to remain as a source of pride for its commitment to holistic development of individual and society"
    </string>
    <string name="str3"><b>MISSION:</b><br />
    </string>
    <string name="str4">"To continuously strive for the overall development of students, educating them in a state of the art infrastructure, by retaining the best practices, people and inspire them to imbibe real time problem solving skills, leadership qualities, human values and societal commitments, so that they emerge as competent professionals"
    </string>
    <string name="str5"><b>Program Educational Objectives(PEOs):</b><br />
    </string>
    <string name="str6"><b>The graduates will be able to:</b><br />
    </string>
    <string name="str7"><b>PEO1:</b><br />
    </string>
    <string name="str8">Acquire core competence in Applied Science, Mathematics and Mechanical Engineering fundamentals to excel in professional career and higher study.
    </string>
    <string name="str9"><b>PEO2:</b><br />
    </string>
    <string name="str10">Design, demonstrate and analyze the mechanical systems which are useful to society.
    </string>
    <string name="str11"><b>PEO3:</b><br />
    </string>
    <string name="str12">Maintain professional and ethical values, employability skills, multidisciplinary approach and an ability to realize engineering issues to broader social context by engaging in lifelong learning.
    </string>
    <string name="str13"><b>Program Specific Outcomes(PSOs):</b><br />
    </string>
    <string name="str14"><b>The graduates will be able to:</b>
    </string>
    <string name="str15"><b>PSO1:</b><br />
    </string>
    <string name="str16">Implement the basic Mechanical Engineering knowledge to solve societal and industrial problems.
    </string>
    <string name="str17"><b>PSO2:</b><br />
    </string>
    <string name="str18">Design and Analyze basic Mechanical system using relevant tools and techniques.
    </string>
    <string name="str19"><b>PSO3:</b><br />
    </string>
    <string name="str20">Understand and address current issues of industries through industry institute interaction and alumni social networks.
    </string>
    <string name="str21"><b>About Department:</b><br />
    </string>
    <string name="civ5"><b>Program Educational Objectives(PEOs):</b><br />
    </string>
    <string name="civ6"><b>The graduates will be able to:</b><br />
    </string>
    <string name="civ7"><b>PEO1:</b><br />
    </string>
    <string name="civ8">Pursue a successful career in various domains of Civil Engineering Profession by acquiring knowledge in mathematical, scientific and engineering fundamentals.
    </string>
    <string name="civ9"><b>PEO2:</b><br />
    </string>
    <string name="civ10">Analyze and design Civil Engineering systems with social awareness and responsibility.
    </string>
    <string name="civ11"><b>PEO3:</b><br />
    </string>
    <string name="civ12">Exhibit professionalism, ethical approach, communication skills and teamwork in their profession and adapt to modern trends by engaging in lifelong learning.
    </string>
    <string name="civ13"><b>Program Specific Outcomes(PSOs):</b><br />
    </string>
    <string name="civ14"><b>The graduates will be able to:</b>
    </string>
    <string name="civ15"><b>PSO1:</b><br />
    </string>
    <string name="civ16">Inculcating in students practical knowledge and experimental skills to tackle Civil Engineering problems using technical and management skills, exhibiting professional ethics to meet the societal needs.
    </string>
    <string name="civ17"><b>PSO2:</b><br />
    </string>
    <string name="civ18">Provide solutions related to Civil Engineering built environment through a multidisciplinary approach .
    </string>
    <string name="civ21"><b>About Department:</b><br />
    </string>
    <string name="civ22">The Civil Engineering is popularly known as mother of all engineering branches. Four years of UG program in Civil Engineering is offered in this institution to meet the need of construction industry. The program is designed to attract and produce competent professionals in Civil Engineering discipline. The choice based credit system (CBCS) curriculum prescribed by VTU, Belagavi (2018-Scheme) is delivered. Special elective courses are offered to meet the modern technological updates in the construction industry.The Department has well equipped and spacious laboratories supported by experienced faculty. The department has Strength of Materials lab, Fluid Mechanics and Hydraulics lab, Geo-technology Lab and Surveying laboratory.
    </string>
    <string name="civ23"><b>Career Prospects:</b><br />
    </string>
    <string name="civ24">Mechanical engineers provide efficient solutions to the development of processes and products, ranging from small component designs to extremely large plant, machinery or vehicles. They can work on all stages of a product, from research and development to design and manufacture, through to installation and final commissioning.
Most industries rely on a form of mechanical systems and mechanical engineering is thought to be one of the most diverse of all engineering disciplines. There are employment opportunities available in a wide range of sectors, such as the manufacturing, power, construction, etc. Mechanical engineers can also be involved in the management of people and resources, as well as the development and use of new materials and technologies.
    </string>
</resources>