<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="48dp"
    tools:context=".CivilHomePage">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/header"
                android:layout_height="60dp"/>

            <ViewFlipper
                android:id="@+id/viewFlipper"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:autoStart="true"
                android:flipInterval="2000"
                android:inAnimation="@android:anim/slide_out_right"
                android:outAnimation="@android:anim/slide_in_left">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/civ1" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/civ2" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/civ3" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/civ4" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/civ5" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/civ6" />
            </ViewFlipper>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                >

                <com.codesgood.views.JustifiedTextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Civil Engineering"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/handling" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str1"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/brown"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str2"
                    android:justificationMode="inter_word"
                    android:textSize="15sp"
                    android:textColor="@color/paragraph"/>

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str3"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="15dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/brown"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str4"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="16dp"
                    android:textSize="15sp"
                    android:textColor="@color/paragraph"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ5"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/paragraph"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ6"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/paragraph"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ7"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/brown"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ8"
                    android:justificationMode="inter_word"
                    android:textSize="15sp"
                    android:textColor="@color/paragraph"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ9"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/brown"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ10"
                    android:justificationMode="inter_word"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/paragraph"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ11"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/brown"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ12"
                    android:justificationMode="inter_word"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/paragraph"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ13"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/paragraph"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ14"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/paragraph"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ15"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/brown"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ16"
                    android:justificationMode="inter_word"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/paragraph"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ17"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/brown"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ18"
                    android:justificationMode="inter_word"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/paragraph"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ21"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/brown"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ22"
                    android:justificationMode="inter_word"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/paragraph"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ23"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/brown"/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civ24"
                    android:justificationMode="inter_word"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/paragraph"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</FrameLayout>